modified:   frontend/package.json

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -106,5 +106,10 @@
     "tailwindcss": "^4",
     "tw-animate-css": "^1.2.4",
     "typescript": "^5"
-  }
+  },
+  "trustedDependencies": [
+    "@parcel/watcher",
+    "@vercel/speed-insights",
+    "core-js"
+  ]
 }
