Add Stripe config validation & env placeholders

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -36,6 +36,10 @@ TAVILY_API_KEY=
 FIRECRAWL_API_KEY=
 FIRECRAWL_URL=
 
+# Stripe configuration
+STRIPE_SECRET_KEY=
+STRIPE_WEBHOOK_SECRET=
+
 # Sandbox container provider:
 DAYTONA_API_KEY=
 DAYTONA_SERVER_URL=
