--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -19,7 +19,7 @@ classifiers = [
 [tool.poetry.dependencies]
 python = "^3.11"
 python-dotenv = "1.0.1"
-litellm = "1.66.1"
+litellm = "^1.35.27"
 click = "8.1.7"
 questionary = "2.0.1"
 requests = "^2.31.0"
@@ -30,8 +30,8 @@ pytest-asyncio = "0.24.0"
 asyncio = "3.4.3"
 altair = "4.2.2"
 prisma = "0.15.0"
-fastapi = "0.110.0"
-uvicorn = "0.27.1"
+fastapi = "^0.110.0"
+uvicorn = {extras = ["standard"], version = "^0.29.0"}
 python-multipart = "0.0.20"
 redis = "5.2.1"
 upstash-redis = "1.3.0"
@@ -48,7 +48,9 @@ nest-asyncio = "^1.6.0"
 vncdotool = "^1.2.0"
 tavily-python = "^0.5.4"
 pytesseract = "^0.3.13"
-stripe = "^12.0.1"
+stripe = "^8.5.0"
+groq = "^0.9.0"
+google-generativeai = "^0.5.4"
 
 [tool.poetry.scripts]
 agentpress = "agentpress.cli:main"
