Implement Google Vertex AI integration for LLM services

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -19,10 +19,20 @@ ANTHROPIC_API_KEY=
 OPENAI_API_KEY=
 MODEL_TO_USE=
 
+# Direct Gemini API (legacy)
+GEMINI_API_KEY=
+
+# Google Vertex AI Configuration
+GCP_PROJECT_ID=your-project-id
+GCP_REGION=us-central1
+VERTEX_AI_ENABLED=true
+
+# AWS Bedrock Configuration
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_REGION_NAME=
 
+# Other LLM Providers
 GROQ_API_KEY=
 OPENROUTER_API_KEY=
 
